Fix: overfloww hidden 제거

--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,4 @@
 body {
   width: 100%;
   margin: 0;
-  overflow: hidden;
 }
